--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 <body>
 
     <h1>App Portfolio</h1>
+	<a href="https://rubilyn.github.io/privacypolicy" style="color: #555; text-decoration: none; margin-bottom: 20px; display: block;">View Our Privacy Policy</a>
+
     <div class="container" id="appContainer"></div>
 
     <script>
