--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -21,11 +21,15 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        a {
+            text-align: center;
+        }
         h1 {
             text-align: center;
             color: #007bff;
             font-weight: 600;
         }
+        
         h2 {
             padding-bottom: 5px;
             font-weight: 600;
@@ -55,6 +59,7 @@
 
     <div class="container">
         <h1>Stickers App - Privacy Policy</h1>
+        <a href="https://rubilyn.github.io" style="color: #555; text-decoration: none; margin-bottom: 20px; display: block;">View Our Stickers</a>
 
         <h2>General Information</h2>
         <p>This policy outlines our privacy practices and explains how we handle the information we collect when you use our app, products, and content.</p>
