--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 
     <script>
         const apps = [
+		{    name: 'Christmas Greetings Animated',
+    artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/a4/90/7f/a4907fcd-cb41-9b7e-d3ce-ff231da7ae37/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/1024x1024bb.png',
+    url: 'https://apps.apple.com/us/app/christmas-greetings-animated/id1182601223',
+    genre: 'Stickers'},
 {
     name: 'Drops - Your IV Drip Rate Companion',
     artwork: 'https://is4-ssl.mzstatic.com/image/thumb/Purple7/v4/05/23/28/0523285a-6a40-7f37-3c7f-7de84f736f1e/source/512x512bb.jpg',
