--- a/index.html
+++ b/index.html
@@ -5,44 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our iMessage Stickers</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-        .app-card {
-            background: white;
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 250px;
-            text-align: center;
-        }
-        .app-card img {
-            width: 100%;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: transform 0.2s ease-in-out;
-        }
-        .app-card img:hover {
-            transform: scale(1.05);
-        }
-        .app-card h3 {
-            font-size: 18px;
-            margin: 10px 0 5px;
-        }
-        .app-card p {
-            color: #555;
-            font-size: 14px;
-        }
+       .app-card,body{text-align:center}body{font-family:Arial,sans-serif;background-color:#f4f4f4;margin:0;padding:20px}.container{display:flex;flex-wrap:wrap;justify-content:center;gap:20px}.app-card{background:#fff;padding:10px;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,.1);width:250px}.app-card img{width:100%;border-radius:10px;cursor:pointer;transition:transform .2s ease-in-out}.app-card img:hover{transform:scale(1.05)}.app-card h3{font-size:18px;margin:10px 0 5px}.app-card p{color:#555;font-size:14px}
     </style>
 </head>
 <body>
