--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
     <script>
         const apps = [
+{
+	name: 'Autumn Greetings',
+	artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/03/d5/93/03d5939e-9a07-32cf-5268-f52709b7bf61/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+	url: 'https://apps.apple.com/us/app/autumn-greetings/id1425749493',
+	genre: 'Stickers'
+		},
 		{    name: 'Christmas Greetings Animated',
     artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d7/3a/a0/d73aa0a9-8b1b-1b54-e2a5-ae4387393734/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
     url: 'https://apps.apple.com/us/app/christmas-greetings-animated/id1182601223',
