--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 
-    <h1>App Portfolio</h1>
+    <h1>Apps and Stickers</h1>
 	<a href="https://rubilyn.github.io/privacypolicy" style="color: #555; text-decoration: none; margin-bottom: 20px; display: block;">View Our Privacy Policy</a>
 
     <div class="container" id="appContainer"></div>
