--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -58,7 +58,7 @@
 <body>
 
     <div class="container">
-        <h1>Stickers App - Privacy Policy</h1>
+        <h1>Apps and Stickers - Privacy Policy</h1>
         <a href="https://rubilyn.github.io" style="color: #555; text-decoration: none; margin-bottom: 20px; display: block;">View Our Stickers</a>
 
         <h2>General Information</h2>
