--- a/index.html
+++ b/index.html
@@ -37,24 +37,28 @@
     <div class="container" id="appContainer"></div>
 
     <script>
-        const apps = [
+const apps = [
 {
-	name: 'Autumn Greetings',
-	artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/03/d5/93/03d5939e-9a07-32cf-5268-f52709b7bf61/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
-	url: 'https://apps.apple.com/us/app/autumn-greetings/id1425749493',
-	genre: 'Stickers'
-		},
-		{    name: 'Christmas Greetings Animated',
-    artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d7/3a/a0/d73aa0a9-8b1b-1b54-e2a5-ae4387393734/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
-    url: 'https://apps.apple.com/us/app/christmas-greetings-animated/id1182601223',
-    genre: 'Stickers'},
+name: 'Autumn Greetings',
+artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/03/d5/93/03d5939e-9a07-32cf-5268-f52709b7bf61/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+url: 'https://apps.apple.com/us/app/autumn-greetings/id1425749493',
+genre: 'Stickers'},
+{    
+name: 'Christmas Greetings Animated',
+artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/d7/3a/a0/d73aa0a9-8b1b-1b54-e2a5-ae4387393734/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+url: 'https://apps.apple.com/us/app/christmas-greetings-animated/id1182601223',
+genre: 'Stickers'},
 {
-    name: 'Drops - Your IV Drip Rate Companion',
-    artwork: 'https://is4-ssl.mzstatic.com/image/thumb/Purple7/v4/05/23/28/0523285a-6a40-7f37-3c7f-7de84f736f1e/source/512x512bb.jpg',
-    url: 'https://apps.apple.com/us/app/drops-your-iv-drip-rate-companion/id991594421?uo=4',
-    genre: 'Medical'
+name: ‘Happy New Year 2023 Animated’,
+artwork: ‘https://is1-ssl.mzstatic.com/image/thumb/Purple112/v4/01/38/24/013824c4-c3cd-83b1-57fd-6b72d6adcd06/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png’,
+url: ‘https://apps.apple.com/us/app/happy-new-year-2023-animated/id1544641492’,
+genre: 'Stickers’
 },
-
+{
+name: 'Drops - Your IV Drip Rate Companion',
+artwork: 'https://is4-ssl.mzstatic.com/image/thumb/Purple7/v4/05/23/28/0523285a-6a40-7f37-3c7f-7de84f736f1e/source/512x512bb.jpg',
+url: 'https://apps.apple.com/us/app/drops-your-iv-drip-rate-companion/id991594421?uo=4',
+genre: 'Medical'},
 {     
 	  name: 'Best Father Stickers',
 	  artwork: 'https://is3-ssl.mzstatic.com/image/thumb/Purple113/v4/d5/02/5e/d5025ef3-5ed3-eb9e-a521-397732b845ca/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/460x344sr.png',
