--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         genre: 'Stickers'
       },
       {
+        name: ‘Year of the Tiger’,
+        artwork: ‘https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/12/d5/de/12d5de80-7822-2f2f-65c1-cdbcf0211a10/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png’,
+        url: ‘https://apps.apple.com/us/app/year-of-the-tiger-新年快乐/id1605231067’,
+        genre: 'Stickers'
+      },
+      {
         name: 'Drops - Your IV Drip Rate Companion',
         artwork: 'https://is4-ssl.mzstatic.com/image/thumb/Purple7/v4/05/23/28/0523285a-6a40-7f37-3c7f-7de84f736f1e/source/512x512bb.jpg',
         url: 'https://apps.apple.com/us/app/drops-your-iv-drip-rate-companion/id991594421?uo=4',
