--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         genre: 'Stickers'
       },
       {
-        name: ‘Year of the Tiger’,
-        artwork: ‘https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/12/d5/de/12d5de80-7822-2f2f-65c1-cdbcf0211a10/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png’,
-        url: ‘https://apps.apple.com/us/app/year-of-the-tiger-新年快乐/id1605231067’,
+        name: 'Year of the Tiger',
+        artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/12/d5/de/12d5de80-7822-2f2f-65c1-cdbcf0211a10/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+        url: 'https://apps.apple.com/us/app/year-of-the-tiger-新年快乐/id1605231067',
         genre: 'Stickers'
       },
       {
