--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         genre: 'Stickers'
       },
       {
+        name: 'Year of the Rabbit Animated',
+        artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/98/cc/0a/98cc0a5a-fd24-7a47-5577-e4b27aadcfd9/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+        url: 'https://apps.apple.com/us/app/year-of-the-rabbit-animated/id1664335344',
+        genre: 'Stickers'
+      },
+      {
         name: 'Year of the Tiger',
         artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/12/d5/de/12d5de80-7822-2f2f-65c1-cdbcf0211a10/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-5-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
         url: 'https://apps.apple.com/us/app/year-of-the-tiger-新年快乐/id1605231067',
