--- a/index.html
+++ b/index.html
@@ -62,6 +62,12 @@
         url: 'https://apps.apple.com/us/app/chinese-new-year-2024-%E6%96%B0%E5%B9%B4%E5%BF%AB%E4%B9%90/id1605232842',
         genre: 'Stickers'
       },
+	{
+        name: 'Year of the Dragon Animated',
+        artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/c2/e6/2d/c2e62d41-53ac-5af2-241f-605842a5e060/AppIcon-0-0-1x_U007emarketing-0-0-85-181.png/1024x768bb.png',
+        url: 'https://apps.apple.com/us/app/year-of-the-dragon-animated/id6476821446',
+        genre: 'Stickers'
+      },
       {
         name: 'Year of the Rabbit Animated',
         artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/98/cc/0a/98cc0a5a-fd24-7a47-5577-e4b27aadcfd9/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
