--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our iMessage Stickers</title>
+    <title>Apps and Stickers</title>
     <style>
         body {
             font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 20px;text-align: center;
@@ -73,6 +73,12 @@
         artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple123/v4/98/cc/0a/98cc0a5a-fd24-7a47-5577-e4b27aadcfd9/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
         url: 'https://apps.apple.com/us/app/year-of-the-rabbit-animated/id1664335344',
         genre: 'Stickers'
+      },
+      { 
+	name: 'Year of the Rabbit 新年快乐',
+	artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple113/v4/d3/70/ba/d370ba67-257b-3f94-feb0-85ce858757db/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
+	url: 'https://apps.apple.com/us/app/year-of-the-rabbit-新年快乐/id1666026367',
+	genre: 'Stickers'
       },
       {
         name: 'Year of the Tiger',
