--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         url: 'https://apps.apple.com/us/app/year-of-the-rabbit-animated/id1664335344',
         genre: 'Stickers'
       },
+      {
+        name: 'Year of the Dragon 2024',
+        artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple116/v4/cb/a8/ca/cba8ca73-ef08-3a79-9ab6-68f095c05244/AppIcon-0-0-1x_U007emarketing-0-0-85-181.png/1024x768bb.png',
+        url: 'https://apps.apple.com/us/app/year-of-the-dragon-2024/id6476821576',
+        genre: 'Stickers'
+      },
       { 
 	name: 'Year of the Rabbit 新年快乐',
 	artwork: 'https://is1-ssl.mzstatic.com/image/thumb/Purple113/v4/d3/70/ba/d370ba67-257b-3f94-feb0-85ce858757db/AppIcon-0-0-1x_U007emarketing-0-0-0-0-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-181-0-0.png/1024x768bb.png',
